--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -3,6 +3,7 @@
     <tr>
       <td scope="col"><b>#</b></td>
       <td scope="col"><b>URL</b></td>
+      <td scope="col"><b>Tags</b></td>
     </tr>
   </thead>
   <tbody>
@@ -14,6 +15,7 @@
               <%= image_tag(image.url, :width => 200) %>
             <% end %>
           </td>
+        <td><%= image.tag_list %></td>
       </tr>
     <% end %>
   </tbody>
