--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -4,6 +4,6 @@
   </div>
   <div class="col-6">
     <b>Image Tags:</b>
-    <span><%= @image.tag_list %></span>
+    <span id="tags"><%= @image.tag_list.map { |t| link_to t, images_path(tag: t) }.join(', ').html_safe %></span>
   </div>
 </div>
