--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,11 @@
           <a class="nav-item nav-link active" href="/images/new">Upload Image <span class="sr-only">(current)</span></a>
         </div>
       </div>
+
+      <form class="form-inline" action="/" method="get">
+        <input class="form-control mr-sm-2" name="tag" type="search" placeholder="Search by Tag" aria-label="Tag">
+        <button class="btn btn-success my-2 my-sm-0" type="submit">Search</button>
+      </form>
     </nav>
     <div class="container pt-2">
       <div class="jumbotron bg-light">
