--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -1,4 +1,12 @@
-<div class="row">
+<div class="float-right">
+  <%= button_to 'Delete',
+                image_path(@image.id),
+                method: :delete,
+                class: 'btn btn-danger',
+                data: { confirm: 'Are you sure you want to delete this image?' } %>
+</div>
+
+<div class="row pt-5">
   <div class="col-6">
     <%= image_tag(@image.url) %>
   </div>
