--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,7 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-item nav-link active" href="/images/new">Upload Image <span class="sr-only">(current)</span></a>
+          <a class="nav-item nav-link active" href="/feedbacks">Feedback <span class="sr-only">(current)</span></a>
         </div>
       </div>
 
